# tetrahedralizer

./: .gitignore  README.md  README.rst  combine_gmsh_meshes.py  fix_mesh.py  pyproject.toml  setup.cfg  so_question.py  test.py  test_combine_lobes.py  tox.ini  view_mesh.py
app/: __init__.py  combine_tetrahedralized_sections.py  fix_mesh.py  mesh_lib.py  remove_shared_faces.py  view_volumetric_mesh.py
app/gmsh_tetrahedralize/: gmsh_tetrahedralize.py  test_gmsh_tetrahedralize.py
app/pymeshlab_boolean/: conf.json  pymeshlab_boolean.py
app/tetrahedralizer_app/: conf.json  tetrahedralizer.py  tetrahedralizer_qt.py
combine_lobes/: combine_lobes.py  test_combine_lobes.py
docs/: conf.py  contributing.rst  examples.rst  index.rst  installation.rst  usage.rst
examples/: tetrahedralize_example.py
examples/pyvista_tools_examples/: extract_enclosed_regions_example.py  extract_outer_surface_example.py  remove_boundary_faces_recursively_example.py  remove_shared_faces_example.py
experimental_scripts/: convert_to_gmsh.py  union_lobes.py
meshes/mock_lung/: mock_RLL.STL  mock_RUL.STL
meshes/test/: Cylinder_Split_Cube_2.STL  sphere_a.STL
pyvista_tools/: pyvista_tools.py  test_pyvista_tools.py
scripts/: combine_tetrahedralized_sections.py  fix_mesh.py  gmsh_tetrahedralize.py  meshio_convert.py  pyvista_boolean.py  remove_shared_faces.py  trimesh_boolean.py  view_volumetric_mesh.py
scripts/gmsh_tetrahedralize/: conf.json  gmsh_tetrahedralize.py  (+1 more)
tests/: test_gmsh_tetrahedralize.py  test_mesh_lib.py  test_pyvista_tools.py
tetrahedralizer/: __main__.py
(+96 files in other folders)
