[metadata]
name = tetrahedralizer
version = 0.0.2

[options]
packages = find:
install_requires =
    numpy
    pyvista
    pymeshfix
    meshio
    pymeshlab
    gmsh
    pyqt5
    pyvistaqt
    adv_prodcon
    pyinstaller
    pyshortcuts
    tqdm
    pyvista_tools @ git+https://github.com/acreegan/pyvista_tools.git
    pyacvd

[options.package_data]
* = *
